# amarisoft-xtrx

./: CMakeLists.txt  license.txt  trx_driver.h  xtrx_plugin.c
cmake/Modules/: FindLibXTRX.cmake
examples/: 2chan.cfg  2chan_for_USB.cfg
